--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my portfolio</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="w-dvw">
+    <div id="root" class="flex flex-col items-center"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://kit.fontawesome.com/2814d08393.js" crossorigin="anonymous"></script>
   </body>
